--- a/index.html
+++ b/index.html
@@ -1,66 +1,47 @@
-﻿<!DOCTYPE html>
-<html lang="vi">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Đăng ký tài khoản</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<meta charset="UTF-8">
+<title>Đăng ký tài khoản</title>
 </head>
-<body class="bg-light">
+<body>
+<h2>Form Đăng ký</h2>
+<form id="registerForm">
+  <label>Tài khoản:</label><br>
+  <input type="text" name="taikhoan" required><br>
 
-<div class="container mt-5">
-  <div class="card p-4 shadow">
-    <h2 class="text-center mb-4">Đăng ký tài khoản</h2>
-    <form id="registerForm">
-      <div class="mb-3">
-        <label class="form-label">Tài khoản</label>
-        <input type="text" class="form-control" id="username" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Mật khẩu</label>
-        <input type="password" class="form-control" id="password" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Xác nhận mật khẩu</label>
-        <input type="password" class="form-control" id="confirmPassword" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Tên người dùng</label>
-        <input type="text" class="form-control" id="fullname" required>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Đăng ký</button>
-    </form>
-    <div id="message" class="mt-3 text-center"></div>
-  </div>
-</div>
+  <label>Mật khẩu:</label><br>
+  <input type="password" name="matkhau" required><br>
+
+  <label>Xác nhận mật khẩu:</label><br>
+  <input type="password" name="xacnhan" required><br>
+
+  <label>Tên người dùng:</label><br>
+  <input type="text" name="ten" required><br><br>
+
+  <button type="submit">Đăng ký</button>
+</form>
+
+<p id="result"></p>
 
 <script>
-  const API_URL = "https://script.google.com/macros/s/AKfycbyoSnUazIrzpvJYwf7WemJDBNDu8bdymas2vpXHv6zv8gAFHrpnTx6zfIRBgnCW6Y4V/exec"; // Thay URL GAS
-
-document.getElementById("registerForm").addEventListener("submit", async function(e) {
+document.getElementById("registerForm").addEventListener("submit", function(e) {
   e.preventDefault();
-  
-  const username = document.getElementById("username").value.trim();
-  const password = document.getElementById("password").value.trim();
-  const confirmPassword = document.getElementById("confirmPassword").value.trim();
-  const fullname = document.getElementById("fullname").value.trim();
 
-  const res = await fetch(API_URL, {
+  const formData = new FormData(this);
+
+  fetch("https://script.google.com/macros/s/AKfycb.../exec", {
     method: "POST",
-    body: JSON.stringify({ username, password, confirmPassword, fullname }),
-    headers: { "Content-Type": "application/json" }
+    body: formData
+  })
+  .then(res => res.text())
+  .then(data => {
+    document.getElementById("result").innerText = data;
+  })
+  .catch(err => {
+    document.getElementById("result").innerText = "Lỗi kết nối: " + err;
   });
-  const result = await res.json();
-
-  const messageDiv = document.getElementById("message");
-  if (result.status === "success") {
-    messageDiv.innerHTML = `<span class="text-success">${result.message}</span>`;
-    document.getElementById("registerForm").reset();
-  } else {
-    messageDiv.innerHTML = `<span class="text-danger">${result.message}</span>`;
-  }
 });
-
 </script>
-
 </body>
 </html>
