--- a/index.html
+++ b/index.html
@@ -1,75 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Đăng ký tài khoản</title>
-<style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 40px;
-}
-input, button {
-  padding: 8px;
-  margin: 5px 0;
-  width: 100%;
-  box-sizing: border-box;
-}
-button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-button:hover {
-  background-color: #45a049;
-}
-#result {
-  margin-top: 15px;
-  font-weight: bold;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Form Đăng ký</title>
 </head>
 <body>
+  <h2>Đăng ký tài khoản</h2>
+  <form id="registerForm">
+    <input type="text" name="username" placeholder="Tài khoản" required><br>
+    <input type="text" name="displayName" placeholder="Tên người dùng" required><br>
+    <input type="password" name="password" placeholder="Mật khẩu" required><br>
+    <input type="password" name="confirmPassword" placeholder="Xác nhận mật khẩu" required><br>
+    <button type="submit">Đăng ký</button>
+  </form>
+  <div id="result"></div>
 
-<h2>Form Đăng ký</h2>
-<form id="registerForm">
-  <label>Tài khoản:</label>
-  <input type="text" name="taikhoan" required>
+  <script>
+    const GAS_URL = "https://script.google.com/macros/s/AKfycbyoSnUazIrzpvJYwf7WemJDBNDu8bdymas2vpXHv6zv8gAFHrpnTx6zfIRBgnCW6Y4V/exec"; // Dán URL Web App ở đây
 
-  <label>Mật khẩu:</label>
-  <input type="password" name="matkhau" required>
+    document.getElementById("registerForm").addEventListener("submit", function(e) {
+      e.preventDefault();
 
-  <label>Xác nhận mật khẩu:</label>
-  <input type="password" name="xacnhan" required>
+      const formData = {
+        username: this.username.value,
+        displayName: this.displayName.value,
+        password: this.password.value,
+        confirmPassword: this.confirmPassword.value
+      };
 
-  <label>Tên người dùng:</label>
-  <input type="text" name="ten" required>
-
-  <button type="submit">Đăng ký</button>
-</form>
-
-<p id="result"></p>
-
-<script>
-document.getElementById("registerForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-
-  const formData = new FormData(this);
-
-  fetch("https://script.google.com/macros/s/AKfycbyoSnUazIrzpvJYwf7WemJDBNDu8bdymas2vpXHv6zv8gAFHrpnTx6zfIRBgnCW6Y4V/exec", {
-    method: "POST",
-    body: formData
-  })
-  .then(res => res.text())
-  .then(data => {
-    document.getElementById("result").innerText = data;
-    this.reset();
-  })
-  .catch(err => {
-    document.getElementById("result").innerText = "Lỗi kết nối: " + err;
-  });
-});
-</script>
-
+      fetch(GAS_URL, {
+        method: "POST",
+        body: JSON.stringify(formData)
+      })
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById("result").innerText = data.message;
+      })
+      .catch(err => {
+        document.getElementById("result").innerText = "Lỗi: " + err;
+      });
+    });
+  </script>
 </body>
 </html>
