--- a/index.html
+++ b/index.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Đăng ký tài khoản</title>
+  <style>
+    body{font-family:Arial,Helvetica,sans-serif;margin:24px}
+    .wrap{max-width:420px}
+    input,button{width:100%;padding:8px;margin:6px 0;box-sizing:border-box}
+    .msg{margin-top:10px;font-weight:600}
+    .err{color:#b00020}
+    .ok{color:#0b6}
+  </style>
 </head>
 <body>
-  <h2>Form Đăng Ký</h2>
-  <form id="registerForm">
-    <label>Tài khoản:</label>
-    <input type="text" id="username" required><br><br>
-    <label>Mật khẩu:</label>
-    <input type="password" id="password" required><br><br>
-    <label>Xác nhận mật khẩu:</label>
-    <input type="password" id="confirmPassword" required><br><br>
-    <label>Tên hiển thị:</label>
-    <input type="text" id="displayName" required><br><br>
-    <button type="submit">Đăng ký</button>
-  </form>
-
-  <p id="result"></p>
+  <div class="wrap">
+    <h2>Đăng ký tài khoản</h2>
+    <form id="form">
+      <input id="username" placeholder="Tài khoản" required />
+      <input id="displayName" placeholder="Tên người dùng" required />
+      <input id="password" type="password" placeholder="Mật khẩu" required />
+      <input id="confirmPassword" type="password" placeholder="Xác nhận mật khẩu" required />
+      <button type="submit">Đăng ký</button>
+    </form>
+    <div id="msg" class="msg"></div>
+  </div>
 
   <script>
-    const GAS_URL = "https://script.google.com/macros/s/AKfycbyoSnUazIrzpvJYwf7WemJDBNDu8bdymas2vpXHv6zv8gAFHrpnTx6zfIRBgnCW6Y4V/exec"; // Dán URL Web App vào đây
+    // *** Thay URL bằng Web App URL bạn deploy từ Apps Script ***
+    const GAS_URL = 'https://script.google.com/macros/s/AKfycbyoSnUazIrzpvJYwf7WemJDBNDu8bdymas2vpXHv6zv8gAFHrpnTx6zfIRBgnCW6Y4V/exec';
 
-    document.getElementById("registerForm").addEventListener("submit", function(e) {
-      e.preventDefault();
+    const form = document.getElementById('form');
+    const msg = document.getElementById('msg');
 
-      const formData = {
-        username: document.getElementById("username").value,
-        password: document.getElementById("password").value,
-        confirmPassword: document.getElementById("confirmPassword").value,
-        displayName: document.getElementById("displayName").value
+    function show(text, ok){ msg.textContent = text; msg.className = 'msg ' + (ok? 'ok':'err'); }
+
+    form.addEventListener('submit', function(ev){
+      ev.preventDefault();
+      show('Đang gửi...', true);
+
+      const payload = {
+        username: document.getElementById('username').value.trim(),
+        displayName: document.getElementById('displayName').value.trim(),
+        password: document.getElementById('password').value,
+        confirmPassword: document.getElementById('confirmPassword').value
       };
 
       fetch(GAS_URL, {
-        method: "POST",
-        mode: "cors",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(formData)
+        method: 'POST',
+        mode: 'cors',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
       })
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("result").innerText = data.message;
+      .then(r => r.json())
+      .then(j => {
+        if (j.status === 'success') {
+          show(j.message || 'Thành công', true);
+          form.reset();
+        } else {
+          show(j.message || 'Lỗi', false);
+        }
       })
       .catch(err => {
-        document.getElementById("result").innerText = "Lỗi kết nối: " + err;
+        show('Lỗi kết nối: ' + (err.message || err), false);
       });
     });
   </script>
 </body>
 </html>
-
