--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <label for="confirm">Xác nhận mật khẩu</label>
     <input type="password" id="confirm" placeholder="Nhập lại mật khẩu">
   </div>
-  <button type="button" id="registerBtn" onclick="registerUser()">Đăng ký</button>
+  <button type="button" onclick="registerUser()">Đăng ký</button>
   <div id="result"></div>
 </div>
 
@@ -140,5 +140,6 @@ function handleResponse(response) {
 
 </body>
 </html>
+
 
 
