--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 <div class="container">
   <h2>Đăng ký tài khoản</h2>
   <div class="form-group">
-    <label for="username">Tên đăng nhập</label>
+    <label for="username">Tài khoản đăng nhập</label>
     <input type="text" id="username" placeholder="Nhập tên đăng nhập">
   </div>
   <div class="form-group">
-    <label for="role">Vai trò</label>
-    <input type="text" id="role" placeholder="Nhập vai trò (VD: User)">
+    <label for="role">Tên người dùng</label>
+    <input type="text" id="role" placeholder="Nhập tên người dùng (VD: Nguyễn Văn A)">
   </div>
   <div class="form-group">
     <label for="password">Mật khẩu</label>
@@ -139,6 +139,7 @@ function handleResponse(response) {
 
 </body>
 </html>
+
 
 
 
