--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <input type="password" id="confirm" placeholder="Nhập lại mật khẩu">
   </div>
   <button type="button" id="registerBtn" onclick="registerUser()">Đăng ký</button>
+  <button type="button" >Đăng nhập</button>
   <div id="result"></div>
 </div>
 
@@ -154,6 +155,7 @@ function handleResponse(response) {
 
 // Tắt trạng thái loading
   btn.textContent = 'Đăng ký';
+
   btn.disabled = false;}
 </script>
 
